--- a/libs/mibao-ui/src/lib/preview/preview.module.scss
+++ b/libs/mibao-ui/src/lib/preview/preview.module.scss
@@ -25,3 +25,17 @@
         transform: scale(1);
     }
 }
+
+.audio {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: calc(100% - 20px);
+    max-width: 500px;
+}
+
+.video {
+    margin: auto;
+    width: calc(100% - 20px);
+}
