--- a/libs/mibao-ui/src/lib/preview/preview.module.scss
+++ b/libs/mibao-ui/src/lib/preview/preview.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
-    width: 100%;
-    height: 100%;
+    width: 100% !important;
+    height: 100% !important;
     max-width: 100%;
     max-height: 100%;
     animation: show 0.3s;
@@ -38,4 +38,6 @@
 .video {
     margin: auto;
     width: calc(100% - 20px);
+    max-width: 500px;
+    max-height: calc(100vh - 100px);
 }
