docs: modal-viewer loading bg

--- a/apps/mibao-ui-docs/src/styles.scss
+++ b/apps/mibao-ui-docs/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+model-viewer {
+    --poster-color: rgba(0 , 0, 0, 0);
+    --poster-image: rgba(0 , 0, 0, 0);
+}
