--- a/libs/mibao-ui/src/lib/avatar/avatar.module.scss
+++ b/libs/mibao-ui/src/lib/avatar/avatar.module.scss
@@ -63,10 +63,9 @@
 .icon.verified {
   width: 30%;
   max-width: 30px;
-  min-width: 15px;
-  right: 0;
-  bottom: 0;
+  min-width: 10px;
+  right: -2px;
+  bottom: -2px;
   top: unset;
   left: unset;
-  transform: translate(15%, 15%);
 }
