fix: fixed preview image scale

--- a/libs/mibao-ui/src/lib/preview/preview.module.scss
+++ b/libs/mibao-ui/src/lib/preview/preview.module.scss
@@ -18,11 +18,13 @@
 
 @keyframes show {
     0% {
-        transform: scale(0);
+      opacity: 0;
+      transform: scale(0.5);
     }
 
     100% {
-        transform: scale(1);
+      opacity: 1;
+      transform: scale(1);
     }
 }
 
