--- a/libs/mibao-ui/src/lib/preview/preview.module.scss
+++ b/libs/mibao-ui/src/lib/preview/preview.module.scss
@@ -3,7 +3,10 @@
   height: 100% !important;
   max-width: 100%;
   max-height: 100%;
-  animation: show 0.2s ease-out;
+  animation: show 150ms ease-out;
+  animation-fill-mode: forwards;
+  animation-delay: 50ms;
+  opacity: 0;
 
   img {
     cursor: grab;
